examples/v2_features.ntl
// NTL v2 — Feature Showcase
// Run: ntl run examples/v2_features.ntl

// ────────────────────────────────────────────
// 1. log — shorthand for console.log
// ────────────────────────────────────────────
log "=== NTL v2 Feature Showcase ==="

// ────────────────────────────────────────────
// 2. range() — generate numeric sequences
// ────────────────────────────────────────────
val nums = range(5)          // [0,1,2,3,4]
val evens = range(0, 10, 2)  // [0,2,4,6,8]
val countdown = range(10, 0, -1) // [10,9,8,...,1]

log "nums:", nums
log "evens:", evens
log "countdown:", countdown

// ────────────────────────────────────────────
// 3. each — clean for-of alias
// ────────────────────────────────────────────
log "\n--- each ---"
val fruits = ["apple", "banana", "cherry"]
each fruit in fruits {
  log "  {fruit}"
}

// ────────────────────────────────────────────
// 4. repeat — repeat N times
// ────────────────────────────────────────────
log "\n--- repeat ---"
let sum = 0
repeat 5 {
  sum += 1
}
log "sum after 5 repeats: {sum}"

// ────────────────────────────────────────────
// 5. guard — early exit pattern
// ────────────────────────────────────────────
log "\n--- guard ---"
fn safeDivide(a, b) {
  guard b !== 0 else {
    return "error: division by zero"
  }
  return a / b
}
log safeDivide(10, 2)   // 5
log safeDivide(10, 0)   // error: division by zero

// ────────────────────────────────────────────
// 6. assert — runtime assertions
// ────────────────────────────────────────────
log "\n--- assert ---"
fn validateAge(age) {
  assert typeof age === "number", "age must be a number"
  assert age >= 0, "age cannot be negative"
  assert age <= 150, "age is unrealistically high"
  return "valid: {age}"
}
log validateAge(25)

try {
  validateAge(-5)
} catch e {
  log "Caught: {e.message}"
}

// ────────────────────────────────────────────
// 7. try? — safe expression (null on error)
// ────────────────────────────────────────────
log "\n--- try? ---"
val parsed = try? JSON.parse('{"key":"value"}')
val bad    = try? JSON.parse("NOT VALID JSON")

log "parsed:", parsed
log "bad (null):", bad

// ────────────────────────────────────────────
// 8. ifhave / ifset (with unique aliases)
// ────────────────────────────────────────────
log "\n--- ifhave / ifset ---"
val user = { name: "Alice", role: "admin" }

ifhave user.name as name {
  log "User name: {name}"
}

ifset user.role as role {
  log "User role: {role}"
}

val missing = null
ifhave missing as m {
  log "should not print"
} else {
  log "missing has no value (as expected)"
}

// ────────────────────────────────────────────
// 9. match with binding + guard (FIXED in v2!)
// ────────────────────────────────────────────
log "\n--- match with guards ---"
fn classify(score) {
  match score {
    case s when s >= 90 => return "A"
    case s when s >= 80 => return "B"
    case s when s >= 70 => return "C"
    case s when s >= 60 => return "D"
    default => return "F"
  }
}

each score in [95, 83, 72, 65, 45] {
  log "score {score} → {classify(score)}"
}

// ────────────────────────────────────────────
// 10. Pattern matching with objects
// ────────────────────────────────────────────
log "\n--- match objects ---"
fn describeShape(shape) {
  match shape {
    case { type: "circle", radius } => return "circle r={radius}"
    case { type: "rect", width, height } => return "rect {width}x{height}"
    default => return "unknown shape"
  }
}

log describeShape({ type: "circle", radius: 5 })
log describeShape({ type: "rect", width: 10, height: 20 })

// ────────────────────────────────────────────
// 11. Pipeline operator
// ────────────────────────────────────────────
log "\n--- pipeline ---"
val trim = s => s.trim()
val upper = s => s.toUpperCase()
val exclaim = s => s + "!"

val greeting = "  hello world  " |> trim |> upper |> exclaim
log greeting  // HELLO WORLD!

// ────────────────────────────────────────────
// 12. Namespace
// ────────────────────────────────────────────
log "\n--- namespace ---"
namespace MathUtils {
  val PI = 3.14159265
  fn circleArea(r) { return PI * r * r }
  fn hypotenuse(a, b) { return Math.sqrt(a * a + b * b) }
}

log "π = {MathUtils.PI}"
log "area(5) = {MathUtils.circleArea(5)}"
log "hypotenuse(3,4) = {MathUtils.hypotenuse(3, 4)}"

// ────────────────────────────────────────────
// 13. Class + inheritance + enum
// ────────────────────────────────────────────
log "\n--- class + enum ---"
enum Direction { North, South, East, West }

class Vehicle {
  speed = 0
  direction = Direction.North

  init(speed) {
    this.speed = speed
  }

  describe() {
    return "Vehicle going {this.speed}km/h"
  }
}

class Car extends Vehicle {
  brand = ""

  init(brand, speed) {
    super.init(speed)
    this.brand = brand
  }

  describe() {
    return "{this.brand} going {this.speed}km/h"
  }
}

val car = new Car("Toyota", 80)
log car.describe()
log "Heading:", Direction.North

// ────────────────────────────────────────────
// 14. unless
// ────────────────────────────────────────────
log "\n--- unless ---"
val authenticated = false
unless authenticated {
  log "Access denied — please log in"
}

// ────────────────────────────────────────────
// 15. Null coalescing + optional chaining
// ────────────────────────────────────────────
log "\n--- null safety ---"
val config = { timeout: null, retries: 3 }
val timeout = config.timeout ?? 5000
val retries = config?.retries ?? 1

log "timeout:", timeout   // 5000
log "retries:", retries   // 3

log "\n=== All v2 features demonstrated! ==="
